[gd_scene load_steps=6 format=3 uid="uid://ckywdp1o7nc2i"]

[ext_resource type="Script" uid="uid://bhoimhgr7awhf" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ActionContainer/parts/nametag.gd" id="1_or75n"]
[ext_resource type="PackedScene" uid="uid://c7n7pxhkwpt0k" path="res://UI/SvgIcon/SVGIcon.tscn" id="3_o1lms"]
[ext_resource type="StyleBox" uid="uid://deoct5txhbuc8" path="res://Styles/OrangePanel.tres" id="3_rodcg"]
[ext_resource type="LabelSettings" uid="uid://oew3p1gg5ddw" path="res://Fonts/font_2_16_black.tres" id="4_rodcg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o1lms"]

[node name="Nametag" type="PanelContainer"]
offset_right = 246.0
offset_bottom = 30.0
size_flags_horizontal = 0
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_o1lms")
script = ExtResource("1_or75n")

[node name="ContentControl" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 0

[node name="PanelContainer" type="PanelContainer" parent="ContentControl"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
offset_left = -123.0
offset_right = 54.0
offset_bottom = 30.0
theme_override_styles/panel = ExtResource("3_rodcg")

[node name="MarginContainer" type="MarginContainer" parent="ContentControl/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="ContentControl/PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="ConstructionIcon" parent="ContentControl/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("3_o1lms")]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
icon = 29
icon_size = Vector2(15, 15)

[node name="StatusIcon" parent="ContentControl/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("3_o1lms")]
layout_mode = 2

[node name="NameLabel" type="Label" parent="ContentControl/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "operations"
label_settings = ExtResource("4_rodcg")

[node name="ArrowControl" type="Control" parent="."]
layout_mode = 2

[node name="DownArrowIcon" parent="ArrowControl" instance=ExtResource("3_o1lms")]
layout_mode = 0
offset_left = 3.0
offset_top = 20.0
offset_right = 23.0
offset_bottom = 40.0
icon = 42
icon_color = Color(1, 0.74902, 0.2, 1)
